--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Hello Page</title>
+</head>
+<body>
+<b><i>Hello World!!!</i></b>
+</body>
+</html>
 Hello World!
