Create my Profile

--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html> <!--Bagian doctype--> 
 <html>
-<head>
+<head> <!--Bagian head-->
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-	<link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-	<link rel="stylesheet" href="stylesheets/github-dark.css">
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="javascripts/script.js"></script>
-
-	<title>Iskdonny.GitHub.io</title>
-	<meta name="description" content="This is my web">
-
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-
+	<meta name="viewport" content="width=device-width">
+	<title>IskDonny Portofolio Site</title> <!--Bagian title-->
 </head>
+<body style="background-color: grey"> <!--Bagian body-->
+	<div align="center">
+		<h1>Who am I</h1> <!--Heading h1--> 
+		<img src="images/doi.JPG" style="border-radius: 25px"> <!--non click image-->
+	</div>
 
-<body>
-	<p>Hello World!!!</p>
+	<div id="main"> <!--div id-->
+		
+		<p align="center">Hi nama saya <b>Donny Iskandar</b>, saya dipanggil <i>Donny</i>.</p> <!--Paragraph, Teks italic & bold--> 
+	
+		<p><b><u>Deskripsi</u></b>
+		<br> <!--line break-->
+		Bergabung dengan Hacktiv8 adalah pilihan saya saat melihat sylabuss, profile mentor dan merupakan pertama kalinya bootcamp web coding di indonesia dibanding dengan course web coding lainnya dan knowledge ini akan saya gunakan untuk bekal kedepannya serta mendukung penggerak roda perekonomian di Negara ini.</p>
+
+		<p>Dalam belajar coding saya mengidolakan dua orang programmer yaitu: 
+			<ol> <!--order list-->
+				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img src="images/ms.png" align="middle" width="15" height="15"></a></li><!--link dibuka dalam window/tab sama-->
+				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img src="images/wa.png" align="middle" width="20" height="20"></a><!--link dibuka dalam window/tab yg berbeda--></li>
+			</ol>
+		Menurut saya, keduanya tidak menyelesaikan pendidikan dengan baik namun hasil dari jerih payahnya dalam membangun aplikasi sangat membantu banyak kehidupan manusia.</p>
+	</div>
+
+	<div class="footer"> <!--div class-->
+		<p><b><u>Contact</u></b></p>
+		<ul><!--order list-->
+			<li>My social media at <a target="_blank" href="https://id.linkedin.com/in/iskandardonny">https://id.linkedin.com/in/iskandardonny</a></li>
+			<li>Email kepada saya di <a href="mailto:isk.donny@gmail.com">isk.donny@gmail.com</a></li> <!--Link alamat email yang jika diklik, membuka aplikasi email-->
+		</ul>
+	  	<blockquote><em>Maju terus Blanford Fox...<em></blockquote>
+	</div>
+	
 </body>
 </html>
+
+
+
