Create my profile2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>IskDonny Portofolio Site</title> <!--Bagian title-->
 </head>
-<body style="background-color: grey"> <!--Bagian body-->
+<body style="background: #d3d3d3"> <!--Bagian body-->
 	<div align="center">
 		<h1>Who am I</h1> <!--Heading h1--> 
 		<img src="images/doi.JPG" style="border-radius: 25px"> <!--non click image-->
@@ -13,7 +13,7 @@
 
 	<div id="main"> <!--div id-->
 		
-		<p align="center">Hi nama saya <b>Donny Iskandar</b>, saya dipanggil <i>Donny</i>.</p> <!--Paragraph, Teks italic & bold--> 
+		<p align="center">Hi nama saya <b>Donny Iskandar</b>, panggil saya <i>Donny</i>.</p> <!--Paragraph, Teks italic & bold--> 
 	
 		<p><b><u>Deskripsi</u></b>
 		<br> <!--line break-->
