--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>IskDonny Portofolio Site</title> <!--Bagian title-->
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
-<body style="background: #d3d3d3"> <!--Bagian body-->
+<body> <!--Bagian body-->
 	<div align="center">
 		<h1>Who am I</h1> <!--Heading h1--> 
 		<img src="images/doi.JPG" style="border-radius: 25px"> <!--non click image-->
