Create my style

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>IskDonny Portofolio Site</title> <!--Bagian title-->
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
 <body> <!--Bagian body-->
-	<div align="center">
+	<div class="header" align="center">
 		<h1>Who am I</h1> <!--Heading h1--> 
-		<img src="images/doi.JPG" style="border-radius: 25px"> <!--non click image-->
 	</div>
 
 	<div id="main"> <!--div id-->
-		
+		<img class="photo" src="images/doi.JPG"> <!--non click image-->
 		<p align="center">Hi nama saya <b>Donny Iskandar</b>, panggil saya <i>Donny</i>.</p> <!--Paragraph, Teks italic & bold--> 
 	
 		<p><b><u>Deskripsi</u></b>
@@ -22,20 +21,19 @@
 
 		<p>Dalam belajar coding saya mengidolakan dua orang programmer yaitu: 
 			<ol> <!--order list-->
-				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img src="images/ms.png" align="middle" width="15" height="15"></a></li><!--link dibuka dalam window/tab sama-->
-				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img src="images/wa.png" align="middle" width="20" height="20"></a><!--link dibuka dalam window/tab yg berbeda--></li>
+				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img src="images/ms.png" align="middle" width="25" height="25"></a></li><!--link dibuka dalam window/tab sama-->
+				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img src="images/wa.png" align="middle" width="30" height="30"></a><!--link dibuka dalam window/tab yg berbeda--></li>
 			</ol>
 		Menurut saya, keduanya tidak menyelesaikan pendidikan dengan baik namun hasil dari jerih payahnya dalam membangun aplikasi sangat membantu banyak kehidupan manusia.</p>
 	</div>
-
 	<div class="footer"> <!--div class-->
 		<p><b><u>Contact</u></b></p>
 		<ul><!--order list-->
 			<li>My social media at <a target="_blank" href="https://id.linkedin.com/in/iskandardonny">https://id.linkedin.com/in/iskandardonny</a></li>
 			<li>Email kepada saya di <a href="mailto:isk.donny@gmail.com">isk.donny@gmail.com</a></li> <!--Link alamat email yang jika diklik, membuka aplikasi email-->
-		</ul>
-	  	<blockquote><em>Maju terus Blanford Fox...<em></blockquote>
-	</div>
+		</ul>	
+		<p>Maju terus Blanford Fox...</p>
+	<div>
 	
 </body>
 </html>
