Enhance my style

--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 	<div class="header" align="center">
 		<h1>Who am I</h1> <!--Heading h1--> 
 	</div>
-
+	<center>
+		<div class="photo-container">
+			<div class="photo">
+				<div class="side">
+					<img src="images/doi.JPG"> <!--non click image-->					
+				</div>
+				<div class="side back">
+					<img src="images/doi2.jpg">
+				</div>
+			</div>		
+		</div>
+	</center>
 	<div id="main"> <!--div id-->
-		<img class="photo" src="images/doi.JPG"> <!--non click image-->
 		<p align="center">Hi nama saya <b>Donny Iskandar</b>, panggil saya <i>Donny</i>.</p> <!--Paragraph, Teks italic & bold--> 
 	
 		<p><b><u>Deskripsi</u></b>
@@ -21,8 +31,8 @@
 
 		<p>Dalam belajar coding saya mengidolakan dua orang programmer yaitu: 
 			<ol> <!--order list-->
-				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img src="images/ms.png" align="middle" width="25" height="25"></a></li><!--link dibuka dalam window/tab sama-->
-				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img src="images/wa.png" align="middle" width="30" height="30"></a><!--link dibuka dalam window/tab yg berbeda--></li>
+				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img class="spin" src="images/ms.png" align="middle" width="30" height="30"></a></li><!--link dibuka dalam window/tab sama-->
+				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img class="spin" src="images/wa.png" align="middle" width="35" height="35"></a><!--link dibuka dalam window/tab yg berbeda--></li>
 			</ol>
 		Menurut saya, keduanya tidak menyelesaikan pendidikan dengan baik namun hasil dari jerih payahnya dalam membangun aplikasi sangat membantu banyak kehidupan manusia.</p>
 	</div>
