Enhance my style

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 				<div class="side">
 					<img src="images/doi.JPG"> <!--non click image-->					
 				</div>
-				<div class="side back">
-					<img src="images/doi2.jpg">
-				</div>
+				<div class="side back">Perhaps serius faces</div>
 			</div>		
 		</div>
 	</center>
