Tidy up my code

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 	<link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
 <body> <!--Bagian body-->
-	<div class="header" align="center">
+	<div class="header">
 		<h1>Who am I</h1> <!--Heading h1--> 
 	</div>
 	<center>
 		<div class="photo-container">
 			<div class="photo">
 				<div class="side">
-					<img src="images/doi.JPG"> <!--non click image-->					
+					<img src="images/doi.JPG" alt="myimages1"> <!--non click image-->					
 				</div>
-				<div class="side back">Perhaps serius faces</div>
+				<div class="side back">Perhaps, serious face</div>
 			</div>		
 		</div>
 	</center>
-	<div id="main"> <!--div id-->
-		<p align="center">Hi nama saya <b>Donny Iskandar</b>, panggil saya <i>Donny</i>.</p> <!--Paragraph, Teks italic & bold--> 
+	<div id="main"> 
+		<p class="middle">Hi nama saya Donny Iskandar, panggil saya Donny.</p> <!--Paragraph, Teks italic & bold--> 
 	
 		<p><b><u>Deskripsi</u></b>
 		<br> <!--line break-->
@@ -29,8 +29,8 @@
 
 		<p>Dalam belajar coding saya mengidolakan dua orang programmer yaitu: 
 			<ol> <!--order list-->
-				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img class="spin" src="images/ms.png" align="middle" width="30" height="30"></a></li><!--link dibuka dalam window/tab sama-->
-				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img class="spin" src="images/wa.png" align="middle" width="35" height="35"></a><!--link dibuka dalam window/tab yg berbeda--></li>
+				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img class="spin" src="images/ms.png" alt="iconimages1"></a></li><!--link dibuka dalam window/tab sama-->
+				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img class="spin" src="images/wa.png" alt="iconimages2"></a><!--link dibuka dalam window/tab yg berbeda--></li>
 			</ol>
 		Menurut saya, keduanya tidak menyelesaikan pendidikan dengan baik namun hasil dari jerih payahnya dalam membangun aplikasi sangat membantu banyak kehidupan manusia.</p>
 	</div>
@@ -40,7 +40,7 @@
 			<li>My social media at <a target="_blank" href="https://id.linkedin.com/in/iskandardonny">https://id.linkedin.com/in/iskandardonny</a></li>
 			<li>Email kepada saya di <a href="mailto:isk.donny@gmail.com">isk.donny@gmail.com</a></li> <!--Link alamat email yang jika diklik, membuka aplikasi email-->
 		</ul>	
-		<p>Maju terus Blanford Fox...</p>
+		<p class="middle">Maju terus Blanford Fox...</p>
 	<div>
 	
 </body>
