Create the first news article

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 	<div class="header">
 		<h1>Who am I</h1> <!--Heading h1--> 
 	</div>
+	<div class="dropdown">
+		<button class="dropbtn">Menu</button>
+		<div class="dropdown-content">
+			<a href="news/first-news.html">Article</a>
+			<a href="#">Storyboard</a>
+		</div>
+	</div>
 	<center>
 		<div class="photo-container">
 			<div class="photo">
