Create the first blog post

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<div class="dropdown">
 		<button class="dropbtn">Menu</button>
 		<div class="dropdown-content">
-			<a href="news/first-news.html">Article</a>
-			<a href="#">Storyboard</a>
+			<a href="news/first-news.html">Artikel</a>
+			<a href="blog/2016-09-02_first-story.html">Blog</a>
 		</div>
 	</div>
 	<center>
