--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="dropdown-content">
 			<a href="news/first-news.html">Artikel</a>
 			<a href="blog/2016-09-02_first-story.html">Blog</a>
-			<a href="webdev/web-dev.html"></a>
+			<a href="webdev/web-dev.html">Web Dev</a>
 		</div>
 	</div>
 	<center>
