--- a/webdev/web-dev.html
+++ b/webdev/web-dev.html
@@ -44,9 +44,11 @@
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1>Proses belajar Web Coding</h1>
-                <p>Site ini akan mendeskripsikan proses dari web development. Dimulai dari tentang apa dan informasi apa yang akan ditampilakan kepada pengunkung dan bagaimana membangunnya</p>
-                <a class="btn btn-primary btn-lg" href="https://iskdonny.github.io">Kunjungi minisite!</a>
+                <h1>Proses Web Coding</h1>
+                <p>Website ini akan mendeskripsikan proses dari web development seperti apa dan hal-hal apa yang diperlukan. Start dari tentang apa dan informasi apa yang akan ditampilakan kepada pengunjung dan bagaimana membangunnya hingga website siap dikunjungi. Di bawah ini adalah topik-topik yang terkait dengan Web Development</p>
+                <a class="btn btn-primary btn-lg classbtn" href="https://iskdonny.github.io/webdesign/web-design.html">Web Designing</a><br>
+                <a class="btn btn-primary btn-lg classbtn" href="https://iskdonny.github.io/webeval/website-evaluation.html">Web Evaluation</a><br>
+                <a class="btn btn-primary btn-lg classbtn" href="https://iskdonny.github.io/wireframes/wireframes.html">W i r e f r a m e</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
