--- a/webdev/web-dev.html
+++ b/webdev/web-dev.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="https://iskdonny.github.io">About</a>
+                        <a href="#">About</a>
                     </li>
                     <li>
                         <a href="mailto:isk.donny@gmail.com">Hubungi</a>
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    iskdonny.github.io
+                    <a href="https://iskdonny.github.io">iskdonny.github.io</a>
                 </div>
             </div>
         </div>
