--- a/wireframes/wireframes.html
+++ b/wireframes/wireframes.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="https://iskdonny.github.io">About</a>
+                        <a href="https://iskdonny.github.io/webdev/web-dev.html">About</a>
                     </li>
                     <li>
                         <a href="mailto:isk.donny@gmail.com">Hubungi</a>
@@ -40,8 +40,8 @@
         <!-- Heading Row -->
         <div class="row">
             <!-- /.col-md-8 -->
-            <div class="col-md-12">
-                <h1>Evaluate Interface and Experience of a Website</h1>
+            <div class="col-lg-12">
+                <h1>Learn to Use Design Process and Wireframing</h1>
             </div>
             <!-- /.col-md-4 -->
         </div>
@@ -60,32 +60,20 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h2>Apa itu adaptive dan responsive web design?</h2>
-                <p></p>
+                <h2>Jabarkan masalah apa yang halaman web tersebut ingin pecahkan melalui tampilan visual?</h2>
+                <p>Opini saya, OLX.co.id pada halaman utama tampak tidak ada hal yang seru atau menarik seperti animasi atau video yang menampilkan feature produk/barang. logo yang berdampingan pada bagian "akun saya" mengambil bagian yang besar padahal di header sudah terdapat logo. Tampilan kurang friendly untuk mobile device, ada bagian yang terpotong di search box button serta banner, sepertinya layout halaman awal adalah adaptif web desktop. Sebaiknya dimungkinkan untuk search box dijadikan atas bawah agar saat dibuka di landscape mode mobile device search box dan button tetap visible
+                </p>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Apakah kamu setuju bahwa teknik tersebut bagus? Mengapa atau mengapa tidak?</h2>
-                <p></p>
+                <h2>Visualisasi</h2>
+                <img class=colimg src="images/visualwireframing.JPG" alt="Visualize">
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Apakah hadirnya smartphone dan tablet mengubah desain web secara signifikan? Bagaimana kira-kira teknologi baru akan mengubah desain web di masa depan? </h2>
-                <p></p>
+                <h2>Wireframing</h2>
+                <img class=colimg src="images/wireframing.JPG" alt="opinion">
             </div>
-            <div class="col-md-4">
-                <h2>Bagaimana kira-kira orang yang memiliki kekurangan fisik menggunakan website? Apakah kita perlu menyesuaikan website untuk mereka juga? Solusi apa yang dapat mengatasi keadaan tersebut?</h2>
-                <p></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Ide atau konsep apa yang sesuai denganmu saat mempelajari desain web? </h2>
-                <p></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Jika ada, sertakan referensi lain yang kamu temukan yang membuatmu lebih memahami topik ini. </h2>
-                <p></p>
-            </div>
-
             <!-- /.col-md-4 -->
         </div>
         <!-- /.row -->
