--- a/wireframes/wireframes.html
+++ b/wireframes/wireframes.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Web Evaluation</title>
+    <title>Wireframing</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="../webdev/css/webdev.css" rel="stylesheet">
 </head>
