--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<a href="news/first-news.html">Artikel</a>
 			<a href="blog/2016-09-02_first-story.html">Blog</a>
 			<a href="webdev/web-dev.html">Web Dev</a>
+			<a href="coreval/core-values.html">Core-Values</a>
 		</div>
 	</div>
 	<center>
