--- a/coreval/core-values.html
+++ b/coreval/core-values.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>Explore Your Core Values</h1>
-                <img src="images/corevalues.jpg" alt="corevalues">
+                <img src="images/corevalues.jpg" alt="values">
             </div>
         </div>
         <!-- /.row -->
