--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<a href="blog/2016-09-02_first-story.html">Blog</a>
 			<a href="webdev/web-dev.html">Web Dev</a>
 			<a href="coreval/core-values.html">Core-Values</a>
+			<a href="reflection/reflection.html">Reflection</a>
 		</div>
 	</div>
 	<center>
