--- a/reflection/reflection.html
+++ b/reflection/reflection.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>Reflection</h1>
-                <img src="images/reflection.jpg" alt="reflection">
+                <img src="https://cloud.githubusercontent.com/assets/14039115/18225838/d30167ba-7227-11e6-8afc-438fceb86871.JPG" alt="reflection">
             </div>
         </div>
         <!-- /.row -->
