--- a/wireframes/wireframes.html
+++ b/wireframes/wireframes.html
@@ -67,12 +67,12 @@
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h2>Visualisasi</h2>
-                <img class=colimg src="images/visualwireframing.JPG" alt="Visualize">
+                <img class=colimg src="https://cloud.githubusercontent.com/assets/14039115/18225882/bd44a666-7228-11e6-8a9e-50b9fa82a87f.JPG" alt="Visualize">
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h2>Wireframing</h2>
-                <img class=colimg src="images/wireframing.JPG" alt="opinion">
+                <img class=colimg src="https://cloud.githubusercontent.com/assets/14039115/18225890/d80f84c0-7228-11e6-881f-1c3d014c83df.JPG" alt="opinion">
             </div>
             <!-- /.col-md-4 -->
         </div>
