--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="photo-container">
 			<div class="photo">
 				<div class="side">
-					<img src="images/doi.JPG" alt="myimages1"> <!--non click image-->					
+					<img src="https://cloud.githubusercontent.com/assets/14039115/18225925/8eff4bc0-7229-11e6-8ae2-29a62b6751ef.JPG" alt="myimages1"> <!--non click image-->					
 				</div>
 				<div class="side back">Perhaps, serious face</div>
 			</div>		
@@ -38,8 +38,8 @@
 
 		<p>Dalam belajar coding saya mengidolakan dua orang programmer yaitu: 
 			<ol> <!--order list-->
-				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img class="spin" src="images/ms.png" alt="iconimages1"></a></li><!--link dibuka dalam window/tab sama-->
-				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img class="spin" src="images/wa.png" alt="iconimages2"></a><!--link dibuka dalam window/tab yg berbeda--></li>
+				<li><a target="_blank" href="http://www.biography.com/people/bill-gates-9307520">Bill Gates</a> (Microsoft) <a href="http://microsoft.com/id-id"><img class="spin" src="https://cloud.githubusercontent.com/assets/14039115/18225945/e4a15686-7229-11e6-8600-ab0fe5c82267.png" alt="iconimages1"></a></li><!--link dibuka dalam window/tab sama-->
+				<li><a href="https://en.wikipedia.org/wiki/Jan_Koum">Jan Koum</a> (WhatsApp) <a href="https://whatsapp.com"><img class="spin" src="https://cloud.githubusercontent.com/assets/14039115/18225949/f8e00ec6-7229-11e6-8d3f-71ba65e9fafb.png" alt="iconimages2"></a><!--link dibuka dalam window/tab yg berbeda--></li>
 			</ol>
 		Menurut saya, keduanya tidak menyelesaikan pendidikan dengan baik namun hasil dari jerih payahnya dalam membangun aplikasi sangat membantu banyak kehidupan manusia.</p>
 	</div>
