--- a/webdesign/web-design.html
+++ b/webdesign/web-design.html
@@ -42,6 +42,7 @@
             <!-- /.col-md-8 -->
             <div class="col-lg-12">
                 <h1>Get to Know Adaptive Web Design (AWD) dan Responsive Web Design (RWB)</h1>
+                <img src="https://cloud.githubusercontent.com/assets/14039115/18226050/080817a2-722c-11e6-9ca0-a80d4ac52443.JPG" alt="webdesigning">
             </div>
             <!-- /.col-md-4 -->
         </div>
