--- a/wireframes/wireframes.html
+++ b/wireframes/wireframes.html
@@ -42,6 +42,7 @@
             <!-- /.col-md-8 -->
             <div class="col-lg-12">
                 <h1>Learn to Use Design Process and Wireframing</h1>
+                <img src="https://cloud.githubusercontent.com/assets/14039115/18226068/54c0fffa-722c-11e6-800c-abcd2495fe93.JPG" alt="wireframing">
             </div>
             <!-- /.col-md-4 -->
         </div>
