--- a/coreval/core-values.html
+++ b/coreval/core-values.html
@@ -41,6 +41,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>Explore Your Core Values</h1>
+                <img src="https://cloud.githubusercontent.com/assets/14039115/18226157/c713a304-722d-11e6-8aeb-32d299898db7.JPG" alt="corevalues">
             </div>
         </div>
         <!-- /.row -->
