--- a/webdev/web-dev.html
+++ b/webdev/web-dev.html
@@ -40,7 +40,7 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive img-rounded" src="https://cloud.githubusercontent.com/assets/14039115/18225858/5bf03ede-7228-11e6-8038-d051695c122a.JPG" alt="ecommerce_marketplace">
+                <img class="img-responsive img-rounded" src="https://cloud.githubusercontent.com/assets/14039115/18226246/d3383a44-722f-11e6-913b-c4d1659f971e.JPG" alt="webdev">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-6">
