--- a/webdev/web-dev.html
+++ b/webdev/web-dev.html
@@ -68,17 +68,17 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>Tentang Apa</h2>
-                <p></p>
+                <p>Saya ingin membuat Website yang dapat melakukan perbandingan atau comparison terhadap barang atau item yang dipilih baik barang yang tersedia internal atau melakukan perbandingan dengan web lain.</p>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h2>Informasi Apa</h2>
-                <p></p>
+                <p>Informasi yang ditampilkan adalah perbandingan barang, misalkan product Ecommerce/marketplace mana yang memiliki harga yang lebih murah kemudian perbandingan lokasi/jarak yang dapat mempengaruhi biaya.</p>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h2>Bagaimana Membuatnya</h2>
-                <p></p>
+                <p>Menurut saya web secara front-end menggunakan HTML-CSS atau mungkin Javascript sedangkan backendnya memiliki teknologi automated backend proses yang kompleks yang dapat melakukan perbandingan items satu yang lain untuk siap ditampilkan atau bahkan melakukan scrapping informasi ke website lainnya.</p>
             </div>
             <!-- /.col-md-4 -->
         </div>
