--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 			<a href="news/first-news.html">Artikel</a>
 			<a href="blog/2016-09-01_first-story.html">Blog</a>
 			<a href="webdev/web-dev.html">Web Dev</a>
+			<a href="webdesign/web-design.html">Web Designing</a>
+			<a href="webeval/website-evaluation.html">Web Evaluation</a>
+			<a href="wireframes/wireframes.html">Wireframe</a>
 			<a href="coreval/core-values.html">Core-Values</a>
 			<a href="reflection/reflection.html">Reflection</a>
 		</div>
