--- a/webdev/web-dev.html
+++ b/webdev/web-dev.html
@@ -46,9 +46,9 @@
             <div class="col-md-6">
                 <h1>Proses Web Coding</h1>
                 <p>Website ini akan mendeskripsikan proses dari web development seperti apa dan hal-hal apa yang diperlukan. Start dari tentang apa dan informasi apa yang akan ditampilkan kepada pengunjung dan bagaimana membangunnya hingga website siap dikunjungi. Di bawah ini adalah topik-topik yang terkait dengan Web Development</p>
-                <a class="btn btn-primary btn-lg classbtn" href="webdesign/web-design.html">Web Designing</a><br>
-                <a class="btn btn-primary btn-lg classbtn" href="webeval/website-evaluation.html">Web Evaluation</a><br>
-                <a class="btn btn-primary btn-lg classbtn" href="wireframes/wireframes.html">W i r e f r a m e</a>
+                <a class="btn btn-primary btn-lg classbtn" href="../webdesign/web-design.html">Web Designing</a><br>
+                <a class="btn btn-primary btn-lg classbtn" href="../webeval/website-evaluation.html">Web Evaluation</a><br>
+                <a class="btn btn-primary btn-lg classbtn" href="../wireframes/wireframes.html">W i r e f r a m e</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
