beginning-hacktiv8-adventure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> <!--Bagian body-->
 	<div class="header">
-		<h1>Who am I</h1> <!--Heading h1--> 
+		<h1>My Bootcamp Site</h1> <!--Heading h1--> 
 	</div>
 	<div class="dropdown">
 		<button class="dropbtn">Menu</button>
