--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head> <!--Bagian head-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>IskDonny Portofolio Site</title> <!--Bagian title-->
+	<meta name="description=" content="MyBootcampsite at hacktiv8">
+	<meta name="author" content="iskdonny">
+	<title>IskDonny Bootcamp Site</title> <!--Bagian title-->
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
 <body> <!--Bagian body-->
@@ -13,14 +16,15 @@
 	<div class="dropdown">
 		<button class="dropbtn">Menu</button>
 		<div class="dropdown-content">
-			<a href="news/first-news.html">Artikel</a>
-			<a href="blog/2016-09-01_first-story.html">Blog</a>
-			<a href="webdev/web-dev.html">Web Dev</a>
-			<a href="webdesign/web-design.html">Web Designing</a>
-			<a href="webeval/website-evaluation.html">Web Evaluation</a>
-			<a href="wireframes/wireframes.html">Wireframe</a>
-			<a href="coreval/core-values.html">Core-Values</a>
-			<a href="reflection/reflection.html">Reflection</a>
+			<a href="news/first-news.html">Artikel <span class="badge">1</span></a>
+			<a href="blog/2016-09-01_first-story.html">Blog <span class="badge">1</span></a>
+			<a href="webdev/web-dev.html">Web Dev <span class="badge">1</span></a>
+			<a href="webdesign/web-design.html">Web Designing <span class="badge">1</span></a>
+			<a href="webeval/website-evaluation.html">Web Evaluation <span class="badge">1</span></a>
+			<a href="wireframes/wireframes.html">Wireframe <span class="badge">1</span></a>
+			<a href="coreval/core-values.html">Core-Values <span class="badge">1</span></a>
+			<a href="reflection/reflection.html">Reflection <span class="badge">1</span></a>
+			<a href="./week-2/learning.html">Learning <span class="badge">2</span></a>
 		</div>
 	</div>
 	<center>
