--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 			<a href="wireframes/wireframes.html">Wireframe <span class="badge">1</span></a>
 			<a href="coreval/core-values.html">Core-Values <span class="badge">1</span></a>
 			<a href="reflection/reflection.html">Reflection <span class="badge">1</span></a>
-			<a href="./week-2/learning.html">Learning <span class="badge">2</span></a>
+			<a href="learning/learning.html">Learning <span class="badge">2</span></a>
+			<a href="javascript1/try.html">Javascript <span class="badge">2</span></a>
 		</div>
 	</div>
 	<center>
