--- a/javascript1/try.html
+++ b/javascript1/try.html
@@ -2,8 +2,18 @@
 <html>
 <head>
 	<title>Javascript Week2</title>
+	<script type="text/javascript" src="example.js"></script>
+	<!--<script src="example.js">-->
 </head>
 <body>
 	<h1>Javascript Week2</h1>
+	<h2 id ="text" onClick="changeRed()">Something</h2>
+	<script>
+		document.write("Tulisan");
+		function changeRed() {
+			document.getElementById("text").style.color="red";		
+		}
+
+	</script>
 </body>
 </html>
