--- a/javascript1/try.html
+++ b/javascript1/try.html
@@ -11,9 +11,18 @@
 	<script>
 		document.write("Tulisan");
 		function changeRed() {
-			document.getElementById("text").style.color="red";		
+			document.getElementById("text").style.color="red";	
 		}
-
 	</script>
+	<h3 id="test4" onclick="test()">old</h5>
+	<script>
+	function test(){
+		document.getElementById("test4").innerHTML="New", 
+		document.getElementById("test4").style.color="blue";
+	}
+	</script>
+	
+
+	</h4>
 </body>
 </html>
